@@ -16,10 +16,11 @@
 package org.rutebanken.tiamat.service.stopplace;
 
 import com.google.api.client.util.Preconditions;
-import org.rutebanken.helper.organisation.ReflectionAuthorizationService;
+import org.rutebanken.tiamat.auth.AuthorizationService;
 import org.rutebanken.tiamat.auth.UsernameFetcher;
 import org.rutebanken.tiamat.changelog.EntityChangedListener;
 import org.rutebanken.tiamat.lock.MutateLock;
+import org.rutebanken.tiamat.model.EntityInVersionStructure;
 import org.rutebanken.tiamat.model.StopPlace;
 import org.rutebanken.tiamat.repository.StopPlaceRepository;
 import org.slf4j.Logger;
@@ -27,14 +28,13 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.transaction.support.TransactionSynchronizationAdapter;
+import org.springframework.transaction.support.TransactionSynchronization;
 import org.springframework.transaction.support.TransactionSynchronizationManager;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
-
-import static org.rutebanken.helper.organisation.AuthorizationConstants.ROLE_DELETE_STOPS;
 
 @Service
 public class StopPlaceDeleter {
@@ -45,14 +45,14 @@ public class StopPlaceDeleter {
 
     private final EntityChangedListener entityChangedListener;
 
-    private final ReflectionAuthorizationService authorizationService;
+    private final AuthorizationService authorizationService;
 
     private final UsernameFetcher usernameFetcher;
 
     private final MutateLock mutateLock;
 
     @Autowired
-    public StopPlaceDeleter(StopPlaceRepository stopPlaceRepository, EntityChangedListener entityChangedListener, ReflectionAuthorizationService authorizationService, UsernameFetcher usernameFetcher, MutateLock mutateLock) {
+    public StopPlaceDeleter(StopPlaceRepository stopPlaceRepository, EntityChangedListener entityChangedListener, AuthorizationService authorizationService, UsernameFetcher usernameFetcher, MutateLock mutateLock) {
         this.stopPlaceRepository = stopPlaceRepository;
         this.entityChangedListener = entityChangedListener;
         this.authorizationService = authorizationService;
@@ -73,7 +73,7 @@ public class StopPlaceDeleter {
                 throw new IllegalArgumentException("Deleting parent stop place or childs of parent stop place is not allowed: " + stopPlaceId);
             }
 
-            authorizationService.assertAuthorized(ROLE_DELETE_STOPS, stopPlaces);
+            authorizationService.verifyCanDeleteEntities(stopPlaces);
             stopPlaceRepository.deleteAll(stopPlaces);
             notifyDeleted(stopPlaces);
 
@@ -96,11 +96,10 @@ public class StopPlaceDeleter {
     //This is to make sure entity is persisted before sending message
     @Transactional
     public void notifyDeleted(List<StopPlace> stopPlaces) {
-        TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronizationAdapter(){
+        TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization(){
             public void afterCommit(){
-                Collections.sort(stopPlaces,
-                        (o1, o2) -> Long.compare(o1.getVersion(), o2.getVersion()));
-                StopPlace newest = stopPlaces.get(stopPlaces.size() - 1);
+                Collections.sort(stopPlaces, Comparator.comparingLong(EntityInVersionStructure::getVersion));
+                StopPlace newest = stopPlaces.getLast();
                 entityChangedListener.onDelete(newest);
             }
         });
