@@ -15,6 +15,7 @@
 
 package org.rutebanken.tiamat.netex.mapping;
 
+import org.jetbrains.annotations.NotNull;
 import org.junit.Ignore;
 import org.junit.Test;
 import org.locationtech.jts.geom.Coordinate;
@@ -100,7 +101,7 @@ public class NetexMapperTest extends TiamatIntegrationTest {
         org.rutebanken.netex.model.SiteFrame netexSiteFrame = netexMapper.mapToNetexModel(sourceSiteFrame);
 
         assertThat(netexSiteFrame).isNotNull();
-        assertThat(netexSiteFrame.getStopPlaces().getStopPlace().get(0).getName().getValue()).isEqualTo(stopPlace.getName().getValue());
+        assertThat(netexSiteFrame.getStopPlaces().getStopPlace().getFirst().getName().getValue()).isEqualTo(stopPlace.getName().getValue());
     }
 
     @Test
@@ -123,7 +124,7 @@ public class NetexMapperTest extends TiamatIntegrationTest {
         org.rutebanken.tiamat.model.SiteFrame actualSiteFrame = netexMapper.mapToTiamatModel(netexSiteFrame);
 
         assertThat(actualSiteFrame).isNotNull();
-        assertThat(actualSiteFrame.getStopPlaces().getStopPlace().get(0).getName().getValue()).isEqualTo(stopPlace.getName().getValue());
+        assertThat(actualSiteFrame.getStopPlaces().getStopPlace().getFirst().getName().getValue()).isEqualTo(stopPlace.getName().getValue());
     }
 
     @Test
@@ -349,7 +350,7 @@ public class NetexMapperTest extends TiamatIntegrationTest {
         assertThat(netexSiteFrame).isNotNull();
         assertThat(netexSiteFrame.getTopographicPlaces().getTopographicPlace()).isNotEmpty();
 
-        org.rutebanken.netex.model.TopographicPlace netexTopographicPlace = netexSiteFrame.getTopographicPlaces().getTopographicPlace().get(0);
+        org.rutebanken.netex.model.TopographicPlace netexTopographicPlace = netexSiteFrame.getTopographicPlaces().getTopographicPlace().getFirst();
         assertThat(netexTopographicPlace.getCountryRef()).as("Reference to country shall not be null").isNotNull();
         assertThat(netexTopographicPlace.getCountryRef().getRef()).isEqualTo(org.rutebanken.netex.model.IanaCountryTldEnumeration.ZM);
 
@@ -387,7 +388,7 @@ public class NetexMapperTest extends TiamatIntegrationTest {
         assertThat(netexSiteFrame).isNotNull();
         assertThat(netexSiteFrame.getTopographicPlaces().getTopographicPlace()).isNotEmpty();
 
-        org.rutebanken.netex.model.TopographicPlace netexMunicipality = netexSiteFrame.getTopographicPlaces().getTopographicPlace().get(0);
+        org.rutebanken.netex.model.TopographicPlace netexMunicipality = netexSiteFrame.getTopographicPlaces().getTopographicPlace().getFirst();
         assertThat(netexMunicipality).isNotNull();
         assertThat(netexMunicipality.getParentTopographicPlaceRef()).describedAs("The municipality should have a reference to the parent topographic place").isNotNull();
         assertThat(netexMunicipality.getParentTopographicPlaceRef().getRef()).isEqualTo(county.getNetexId());
@@ -439,7 +440,7 @@ public class NetexMapperTest extends TiamatIntegrationTest {
         assertThat(netexSiteFrame).isNotNull();
         assertThat(netexSiteFrame.getTopographicPlaces().getTopographicPlace()).isNotEmpty();
 
-        TopographicPlace actualTiamatMunicipality = tiamatSiteFrame.getTopographicPlaces().getTopographicPlace().get(0);
+        TopographicPlace actualTiamatMunicipality = tiamatSiteFrame.getTopographicPlaces().getTopographicPlace().getFirst();
         assertThat(actualTiamatMunicipality).isNotNull();
         assertThat(actualTiamatMunicipality.getParentTopographicPlaceRef())
                 .describedAs("The municipality should have a parent topographic place").isNotNull();
@@ -465,18 +466,24 @@ public class NetexMapperTest extends TiamatIntegrationTest {
     protected org.rutebanken.netex.model.AccessibilityAssessment createNetexAccessibilityAssessment() {
         org.rutebanken.netex.model.AccessibilityAssessment accessibilityAssessment = new org.rutebanken.netex.model.AccessibilityAssessment();
 
-        org.rutebanken.netex.model.AccessibilityLimitation accessibilityLimitation = new org.rutebanken.netex.model.AccessibilityLimitation();
-        accessibilityLimitation.setWheelchairAccess(org.rutebanken.netex.model.LimitationStatusEnumeration.TRUE);
-        accessibilityLimitation.setLiftFreeAccess(org.rutebanken.netex.model.LimitationStatusEnumeration.TRUE);
-        accessibilityLimitation.setEscalatorFreeAccess(org.rutebanken.netex.model.LimitationStatusEnumeration.TRUE);
-        accessibilityLimitation.setAudibleSignalsAvailable(org.rutebanken.netex.model.LimitationStatusEnumeration.TRUE);
-        accessibilityLimitation.setStepFreeAccess(org.rutebanken.netex.model.LimitationStatusEnumeration.TRUE);
+        final org.rutebanken.netex.model.AccessibilityLimitation accessibilityLimitation = getAccessibilityLimitation();
         AccessibilityLimitations_RelStructure limitationsRelStructure = new AccessibilityLimitations_RelStructure();
 
 
         limitationsRelStructure.setAccessibilityLimitation(accessibilityLimitation);
         accessibilityAssessment.setLimitations(limitationsRelStructure);
         return accessibilityAssessment;
+    }
+
+    @NotNull
+    private static org.rutebanken.netex.model.AccessibilityLimitation getAccessibilityLimitation() {
+        org.rutebanken.netex.model.AccessibilityLimitation accessibilityLimitation = new org.rutebanken.netex.model.AccessibilityLimitation();
+        accessibilityLimitation.setWheelchairAccess(org.rutebanken.netex.model.LimitationStatusEnumeration.TRUE);
+        accessibilityLimitation.setLiftFreeAccess(org.rutebanken.netex.model.LimitationStatusEnumeration.TRUE);
+        accessibilityLimitation.setEscalatorFreeAccess(org.rutebanken.netex.model.LimitationStatusEnumeration.TRUE);
+        accessibilityLimitation.setAudibleSignalsAvailable(org.rutebanken.netex.model.LimitationStatusEnumeration.TRUE);
+        accessibilityLimitation.setStepFreeAccess(org.rutebanken.netex.model.LimitationStatusEnumeration.TRUE);
+        return accessibilityLimitation;
     }
 
     @Test
@@ -584,7 +591,7 @@ public class NetexMapperTest extends TiamatIntegrationTest {
 
         org.rutebanken.netex.model.SiteRefStructure firstSiteRef = siteRefs_relStructure.
                 getSiteRef().
-                get(0)
+                getFirst()
                 .getValue();
 
         assertThat(firstSiteRef)
