@@ -15,6 +15,7 @@
 
 package org.rutebanken.tiamat.rest.netex.publicationdelivery;
 
+import jakarta.xml.bind.JAXBException;
 import org.junit.Test;
 import org.rutebanken.netex.model.KeyListStructure;
 import org.rutebanken.netex.model.KeyValueStructure;
@@ -32,7 +33,6 @@ import org.rutebanken.tiamat.importer.ImportType;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.xml.sax.SAXException;
 
-import javax.xml.bind.JAXBException;
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.util.List;
@@ -74,7 +74,7 @@ public class StopPlaceMatchingTest extends TiamatIntegrationTest {
         List<StopPlace> result = publicationDeliveryTestHelper.extractStopPlaces(response);
 
         assertThat(result).hasSize(1);
-        publicationDeliveryTestHelper.hasOriginalId(stopPlaceToBeMatched.getId(), result.get(0));
+        publicationDeliveryTestHelper.hasOriginalId(stopPlaceToBeMatched.getId(), result.getFirst());
     }
 
     /**
@@ -125,8 +125,8 @@ public class StopPlaceMatchingTest extends TiamatIntegrationTest {
         List<StopPlace> result = publicationDeliveryTestHelper.extractStopPlaces(response);
 
         assertThat(result).hasSize(1);
-        publicationDeliveryTestHelper.hasOriginalId(stopPlaceToBeMatched.getId(), result.get(0));
-        assertThat(result.get(0).getStopPlaceType()).isEqualTo(stopPlaceToBeMatched.getStopPlaceType());
+        publicationDeliveryTestHelper.hasOriginalId(stopPlaceToBeMatched.getId(), result.getFirst());
+        assertThat(result.getFirst().getStopPlaceType()).isEqualTo(stopPlaceToBeMatched.getStopPlaceType());
     }
 
     /**
@@ -255,7 +255,7 @@ public class StopPlaceMatchingTest extends TiamatIntegrationTest {
         List<StopPlace> result = publicationDeliveryTestHelper.extractStopPlaces(response);
 
         assertThat(result).hasSize(1);
-        StopPlace actualStopPlace = result.get(0);
+        StopPlace actualStopPlace = result.getFirst();
         publicationDeliveryTestHelper.hasOriginalId(nearbyStopPlace.getId(), actualStopPlace);
         publicationDeliveryTestHelper.hasOriginalId(stopPlaceToBeMerged.getId(), actualStopPlace);
 
@@ -292,7 +292,7 @@ public class StopPlaceMatchingTest extends TiamatIntegrationTest {
         List<StopPlace> result = publicationDeliveryTestHelper.extractStopPlaces(response);
 
         assertThat(result).hasSize(1);
-        publicationDeliveryTestHelper.hasOriginalId(stopPlaceToBeMatched.getId(), result.get(0));
+        publicationDeliveryTestHelper.hasOriginalId(stopPlaceToBeMatched.getId(), result.getFirst());
     }
 
     @Test
@@ -357,7 +357,7 @@ public class StopPlaceMatchingTest extends TiamatIntegrationTest {
         List<StopPlace> result = publicationDeliveryTestHelper.extractStopPlaces(response);
 
         assertThat(result).hasSize(1);
-        publicationDeliveryTestHelper.hasOriginalId("RUT:StopPlace:0111111111", result.get(0));
+        publicationDeliveryTestHelper.hasOriginalId("RUT:StopPlace:0111111111", result.getFirst());
     }
 
     @Test
@@ -389,7 +389,7 @@ public class StopPlaceMatchingTest extends TiamatIntegrationTest {
         List<StopPlace> result = publicationDeliveryTestHelper.extractStopPlaces(response);
 
         assertThat(result).hasSize(1);
-        publicationDeliveryTestHelper.hasOriginalId("RUT:StopPlace:111111111", result.get(0));
+        publicationDeliveryTestHelper.hasOriginalId("RUT:StopPlace:111111111", result.getFirst());
 
         // When the import type is ID_MATCH, no original ID is appended
         // publicationDeliveryTestHelper.hasOriginalId("AKT:StopPlace:0111111111", result.get(0));
@@ -449,7 +449,7 @@ public class StopPlaceMatchingTest extends TiamatIntegrationTest {
         List<StopPlace> result = publicationDeliveryTestHelper.extractStopPlaces(response);
 
         assertThat(result).hasSize(1);
-        publicationDeliveryTestHelper.hasOriginalId(stopPlace1.getId(), result.get(0));
+        publicationDeliveryTestHelper.hasOriginalId(stopPlace1.getId(), result.getFirst());
     }
 
     @Test
@@ -483,7 +483,7 @@ public class StopPlaceMatchingTest extends TiamatIntegrationTest {
         List<StopPlace> result = publicationDeliveryTestHelper.extractStopPlaces(response);
 
         assertThat(result).hasSize(1);
-        publicationDeliveryTestHelper.hasOriginalId(stopPlace1.getId(), result.get(0));
+        publicationDeliveryTestHelper.hasOriginalId(stopPlace1.getId(), result.getFirst());
     }
 
     @Test
@@ -517,7 +517,7 @@ public class StopPlaceMatchingTest extends TiamatIntegrationTest {
         List<StopPlace> result = publicationDeliveryTestHelper.extractStopPlaces(response);
 
         assertThat(result).hasSize(1);
-        publicationDeliveryTestHelper.hasOriginalId(stopPlace1.getId(), result.get(0));
+        publicationDeliveryTestHelper.hasOriginalId(stopPlace1.getId(), result.getFirst());
     }
 
     @Test
@@ -551,7 +551,7 @@ public class StopPlaceMatchingTest extends TiamatIntegrationTest {
         List<StopPlace> result = publicationDeliveryTestHelper.extractStopPlaces(response);
 
         assertThat(result).hasSize(1);
-        publicationDeliveryTestHelper.hasOriginalId(stopPlace1.getId(), result.get(0));
+        publicationDeliveryTestHelper.hasOriginalId(stopPlace1.getId(), result.getFirst());
     }
 
     @Test
@@ -585,7 +585,7 @@ public class StopPlaceMatchingTest extends TiamatIntegrationTest {
         List<StopPlace> result = publicationDeliveryTestHelper.extractStopPlaces(response);
 
         assertThat(result).hasSize(1);
-        publicationDeliveryTestHelper.hasOriginalId(stopPlace1.getId(), result.get(0));
+        publicationDeliveryTestHelper.hasOriginalId(stopPlace1.getId(), result.getFirst());
     }
 
     /**
@@ -594,200 +594,204 @@ public class StopPlaceMatchingTest extends TiamatIntegrationTest {
     @Test
     public void matchOneIncomingStopToMultipleTiamatStops() throws JAXBException, IOException, SAXException {
 
-        String initiallyImportedStops = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-                "<PublicationDelivery xmlns=\"http://www.netex.org.uk/netex\">\n" +
-                "  <PublicationTimestamp>2017-05-05T15:12:33.618+02:00</PublicationTimestamp>\n" +
-                "  <ParticipantRef>XYZ</ParticipantRef>\n" +
-                "  <dataObjects>\n" +
-                "    <SiteFrame id=\"initial\" version=\"1\">\n" +
-                "       <FrameDefaults>\n" +
-                "           <DefaultLocale>\n" +
-                "              <TimeZone>Europe/Oslo</TimeZone>\n" +
-                "               <DefaultLanguage>no</DefaultLanguage>\n" +
-                "           </DefaultLocale>\n" +
-                "      </FrameDefaults>\n" +
-                "      <stopPlaces>\n" +
-                "        <StopPlace id=\"SOF:StopPlace:14162447Bus\" version=\"1\">\n" +
-                "          <keyList>\n" +
-                "            <KeyValue>\n" +
-                "              <Key>imported-id</Key>\n" +
-                "              <Value>SOF:StopPlace:14162447,NRI:StopPlace:761115465</Value>\n" +
-                "            </KeyValue>\n" +
-                "          </keyList>\n" +
-                "          <Name lang=\"no\">Nordeide kai</Name>\n" +
-                "          <Centroid>\n" +
-                "            <Location srsName=\"EPSG:4326\">\n" +
-                "              <Longitude>5.98568</Longitude>\n" +
-                "              <Latitude>61.172894</Latitude>\n" +
-                "            </Location>\n" +
-                "          </Centroid>\n" +
-                "          <AccessibilityAssessment id=\"SOF:AccessibilityAssessment:14162447Bus\" version=\"1\">\n" +
-                "            <MobilityImpairedAccess>unknown</MobilityImpairedAccess>\n" +
-                "            <limitations>\n" +
-                "              <AccessibilityLimitation>\n" +
-                "                <WheelchairAccess>unknown</WheelchairAccess>\n" +
-                "                <StepFreeAccess>unknown</StepFreeAccess>\n" +
-                "              </AccessibilityLimitation>\n" +
-                "            </limitations>\n" +
-                "          </AccessibilityAssessment>\n" +
-                "          <StopPlaceType>onstreetBus</StopPlaceType>\n" +
-                "          <Weighting>interchangeAllowed</Weighting>\n" +
-                "          <quays>\n" +
-                "            <n:Quay xmlns:n=\"http://www.netex.org.uk/netex\" id=\"SOF:Quay:1416244702\" version=\"1\">\n" +
-                "              <keyList>\n" +
-                "                <KeyValue>\n" +
-                "                  <Key>imported-id</Key>\n" +
-                "                  <Value>NRI:Quay:762132224</Value>\n" +
-                "                </KeyValue>\n" +
-                "              </keyList>\n" +
-                "              <Centroid>\n" +
-                "                <Location srsName=\"EPSG:4326\">\n" +
-                "                  <Longitude>5.9861436</Longitude>\n" +
-                "                  <Latitude>61.173157</Latitude>\n" +
-                "                </Location>\n" +
-                "              </Centroid>\n" +
-                "              <Lighting>unknown</Lighting>\n" +
-                "              <PublicCode>2</PublicCode>\n" +
-                "              <!--Enriched CompassBearing-->\n" +
-                "              <n:CompassBearing>311.0</n:CompassBearing>\n" +
-                "            </n:Quay>\n" +
-                "            <n:Quay xmlns:n=\"http://www.netex.org.uk/netex\" id=\"SOF:Quay:1416244701\" version=\"1\">\n" +
-                "              <keyList>\n" +
-                "                <KeyValue>\n" +
-                "                  <Key>imported-id</Key>\n" +
-                "                  <Value>NRI:Quay:762054659</Value>\n" +
-                "                </KeyValue>\n" +
-                "              </keyList>\n" +
-                "              <Centroid>\n" +
-                "                <Location srsName=\"EPSG:4326\">\n" +
-                "                  <Longitude>5.9847283</Longitude>\n" +
-                "                  <Latitude>61.172707</Latitude>\n" +
-                "                </Location>\n" +
-                "              </Centroid>\n" +
-                "              <Lighting>unknown</Lighting>\n" +
-                "              <PublicCode>1</PublicCode>\n" +
-                "              <!--Enriched CompassBearing-->\n" +
-                "              <n:CompassBearing>233.0</n:CompassBearing>\n" +
-                "            </n:Quay>\n" +
-                "          </quays>\n" +
-                "        </StopPlace>\n" +
-                "        <StopPlace id=\"SOF:StopPlace:14162447Ferje\" version=\"1\">\n" +
-                "          <keyList>\n" +
-                "            <KeyValue>\n" +
-                "              <Key>imported-id</Key>\n" +
-                "              <Value>SOF:StopPlace:14162447,NRI:StopPlace:761115465</Value>\n" +
-                "            </KeyValue>\n" +
-                "          </keyList>\n" +
-                "          <Name lang=\"no\">Nordeide kai</Name>\n" +
-                "          <Centroid>\n" +
-                "            <Location srsName=\"EPSG:4326\">\n" +
-                "              <Longitude>5.98568</Longitude>\n" +
-                "              <Latitude>61.172894</Latitude>\n" +
-                "            </Location>\n" +
-                "          </Centroid>\n" +
-                "          <AccessibilityAssessment id=\"SOF:AccessibilityAssessment:14162447Ferje\" version=\"1\">\n" +
-                "            <MobilityImpairedAccess>unknown</MobilityImpairedAccess>\n" +
-                "            <limitations>\n" +
-                "              <AccessibilityLimitation>\n" +
-                "                <WheelchairAccess>unknown</WheelchairAccess>\n" +
-                "                <StepFreeAccess>unknown</StepFreeAccess>\n" +
-                "              </AccessibilityLimitation>\n" +
-                "            </limitations>\n" +
-                "          </AccessibilityAssessment>\n" +
-                "          <StopPlaceType>harbourPort</StopPlaceType>\n" +
-                "          <Weighting>interchangeAllowed</Weighting>\n" +
-                "          <quays>\n" +
-                "            <n:Quay xmlns:n=\"http://www.netex.org.uk/netex\" id=\"SOF:Quay:1416244703\" version=\"1\">\n" +
-                "              <keyList>\n" +
-                "                <KeyValue>\n" +
-                "                  <Key>imported-id</Key>\n" +
-                "                  <Value>NRI:Quay:762054660</Value>\n" +
-                "                </KeyValue>\n" +
-                "              </keyList>\n" +
-                "              <Centroid>\n" +
-                "                <Location srsName=\"EPSG:4326\">\n" +
-                "                  <Longitude>5.986519</Longitude>\n" +
-                "                  <Latitude>61.173313</Latitude>\n" +
-                "                </Location>\n" +
-                "              </Centroid>\n" +
-                "              <Lighting>unknown</Lighting>\n" +
-                "              <PublicCode>3</PublicCode>\n" +
-                "              <!--Enriched CompassBearing-->\n" +
-                "              <n:CompassBearing>132.0</n:CompassBearing>\n" +
-                "            </n:Quay>\n" +
-                "          </quays>\n" +
-                "        </StopPlace>\n" +
-                "      </stopPlaces>\n" +
-                "    </SiteFrame>\n" +
-                "  </dataObjects>\n" +
-                "</PublicationDelivery>\n";
+        String initiallyImportedStops = """
+                <?xml version="1.0" encoding="UTF-8"?>
+                <PublicationDelivery xmlns="http://www.netex.org.uk/netex">
+                  <PublicationTimestamp>2017-05-05T15:12:33.618+02:00</PublicationTimestamp>
+                  <ParticipantRef>XYZ</ParticipantRef>
+                  <dataObjects>
+                    <SiteFrame id="initial" version="1">
+                       <FrameDefaults>
+                           <DefaultLocale>
+                              <TimeZone>Europe/Oslo</TimeZone>
+                               <DefaultLanguage>no</DefaultLanguage>
+                           </DefaultLocale>
+                      </FrameDefaults>
+                      <stopPlaces>
+                        <StopPlace id="SOF:StopPlace:14162447Bus" version="1">
+                          <keyList>
+                            <KeyValue>
+                              <Key>imported-id</Key>
+                              <Value>SOF:StopPlace:14162447,NRI:StopPlace:761115465</Value>
+                            </KeyValue>
+                          </keyList>
+                          <Name lang="no">Nordeide kai</Name>
+                          <Centroid>
+                            <Location srsName="EPSG:4326">
+                              <Longitude>5.98568</Longitude>
+                              <Latitude>61.172894</Latitude>
+                            </Location>
+                          </Centroid>
+                          <AccessibilityAssessment id="SOF:AccessibilityAssessment:14162447Bus" version="1">
+                            <MobilityImpairedAccess>unknown</MobilityImpairedAccess>
+                            <limitations>
+                              <AccessibilityLimitation>
+                                <WheelchairAccess>unknown</WheelchairAccess>
+                                <StepFreeAccess>unknown</StepFreeAccess>
+                              </AccessibilityLimitation>
+                            </limitations>
+                          </AccessibilityAssessment>
+                          <StopPlaceType>onstreetBus</StopPlaceType>
+                          <Weighting>interchangeAllowed</Weighting>
+                          <quays>
+                            <n:Quay xmlns:n="http://www.netex.org.uk/netex" id="SOF:Quay:1416244702" version="1">
+                              <keyList>
+                                <KeyValue>
+                                  <Key>imported-id</Key>
+                                  <Value>NRI:Quay:762132224</Value>
+                                </KeyValue>
+                              </keyList>
+                              <Centroid>
+                                <Location srsName="EPSG:4326">
+                                  <Longitude>5.9861436</Longitude>
+                                  <Latitude>61.173157</Latitude>
+                                </Location>
+                              </Centroid>
+                              <Lighting>unknown</Lighting>
+                              <PublicCode>2</PublicCode>
+                              <!--Enriched CompassBearing-->
+                              <n:CompassBearing>311.0</n:CompassBearing>
+                            </n:Quay>
+                            <n:Quay xmlns:n="http://www.netex.org.uk/netex" id="SOF:Quay:1416244701" version="1">
+                              <keyList>
+                                <KeyValue>
+                                  <Key>imported-id</Key>
+                                  <Value>NRI:Quay:762054659</Value>
+                                </KeyValue>
+                              </keyList>
+                              <Centroid>
+                                <Location srsName="EPSG:4326">
+                                  <Longitude>5.9847283</Longitude>
+                                  <Latitude>61.172707</Latitude>
+                                </Location>
+                              </Centroid>
+                              <Lighting>unknown</Lighting>
+                              <PublicCode>1</PublicCode>
+                              <!--Enriched CompassBearing-->
+                              <n:CompassBearing>233.0</n:CompassBearing>
+                            </n:Quay>
+                          </quays>
+                        </StopPlace>
+                        <StopPlace id="SOF:StopPlace:14162447Ferje" version="1">
+                          <keyList>
+                            <KeyValue>
+                              <Key>imported-id</Key>
+                              <Value>SOF:StopPlace:14162447,NRI:StopPlace:761115465</Value>
+                            </KeyValue>
+                          </keyList>
+                          <Name lang="no">Nordeide kai</Name>
+                          <Centroid>
+                            <Location srsName="EPSG:4326">
+                              <Longitude>5.98568</Longitude>
+                              <Latitude>61.172894</Latitude>
+                            </Location>
+                          </Centroid>
+                          <AccessibilityAssessment id="SOF:AccessibilityAssessment:14162447Ferje" version="1">
+                            <MobilityImpairedAccess>unknown</MobilityImpairedAccess>
+                            <limitations>
+                              <AccessibilityLimitation>
+                                <WheelchairAccess>unknown</WheelchairAccess>
+                                <StepFreeAccess>unknown</StepFreeAccess>
+                              </AccessibilityLimitation>
+                            </limitations>
+                          </AccessibilityAssessment>
+                          <StopPlaceType>harbourPort</StopPlaceType>
+                          <Weighting>interchangeAllowed</Weighting>
+                          <quays>
+                            <n:Quay xmlns:n="http://www.netex.org.uk/netex" id="SOF:Quay:1416244703" version="1">
+                              <keyList>
+                                <KeyValue>
+                                  <Key>imported-id</Key>
+                                  <Value>NRI:Quay:762054660</Value>
+                                </KeyValue>
+                              </keyList>
+                              <Centroid>
+                                <Location srsName="EPSG:4326">
+                                  <Longitude>5.986519</Longitude>
+                                  <Latitude>61.173313</Latitude>
+                                </Location>
+                              </Centroid>
+                              <Lighting>unknown</Lighting>
+                              <PublicCode>3</PublicCode>
+                              <!--Enriched CompassBearing-->
+                              <n:CompassBearing>132.0</n:CompassBearing>
+                            </n:Quay>
+                          </quays>
+                        </StopPlace>
+                      </stopPlaces>
+                    </SiteFrame>
+                  </dataObjects>
+                </PublicationDelivery>
+                """;
 
-        String idMatch = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-                "<PublicationDelivery xmlns=\"http://www.netex.org.uk/netex\">\n" +
-                "  <PublicationTimestamp>2017-05-05T15:12:33.618+02:00</PublicationTimestamp>\n" +
-                "  <ParticipantRef>ZZZ</ParticipantRef>\n" +
-                "  <dataObjects>\n" +
-                "    <SiteFrame id=\"idmatch\" version=\"1\">\n" +
-                "       <FrameDefaults>\n" +
-                "           <DefaultLocale>\n" +
-                "              <TimeZone>CET</TimeZone>\n" +
-                "               <DefaultLanguage>no</DefaultLanguage>\n" +
-                "           </DefaultLocale>\n" +
-                "      </FrameDefaults>\n" +
-                "      <stopPlaces>\n" +
-                "        <StopPlace version=\"1\" id=\"SOF:StopPlace:14162447\">\n" +
-                "          <Name lang=\"no\" textIdType=\"\">Nordeide kai</Name>\n" +
-                "          <Centroid>\n" +
-                "            <Location>\n" +
-                "              <Longitude>5.985714134603235</Longitude>\n" +
-                "              <Latitude>61.1729031032732</Latitude>\n" +
-                "            </Location>\n" +
-                "          </Centroid>\n" +
-                "          <StopPlaceType>onstreetBus</StopPlaceType>\n" +
-                "          <quays>\n" +
-                "            <Quay version=\"1\" id=\"SOF:Quay:1416244704\">\n" +
-                "              <Name lang=\"no\" textIdType=\"\">Nordeide kai</Name>\n" +
-                "              <Centroid>\n" +
-                "                <Location>\n" +
-                "                  <Longitude>5.98541250888936193774725325056351721286773681640625</Longitude>\n" +
-                "                  <Latitude>61.17240898514889835269059403799474239349365234375</Latitude>\n" +
-                "                </Location>\n" +
-                "              </Centroid>\n" +
-                "            </Quay>\n" +
-                "            <Quay version=\"1\" id=\"SOF:Quay:1416244703\">\n" +
-                "              <Name lang=\"no\" textIdType=\"\">Nordeide kai</Name>\n" +
-                "              <Centroid>\n" +
-                "                <Location>\n" +
-                "                  <Longitude>5.98656984073603748441882999031804502010345458984375</Longitude>\n" +
-                "                  <Latitude>61.17334218350138286268702358938753604888916015625</Latitude>\n" +
-                "                </Location>\n" +
-                "              </Centroid>\n" +
-                "            </Quay>\n" +
-                "            <Quay version=\"1\" id=\"SOF:Quay:1416244702\">\n" +
-                "              <Name lang=\"no\" textIdType=\"\">Nordeide kai</Name>\n" +
-                "              <Centroid>\n" +
-                "                <Location>\n" +
-                "                  <Longitude>5.98614141196775673137153717107139527797698974609375</Longitude>\n" +
-                "                  <Latitude>61.17315295435830790893305675126612186431884765625</Latitude>\n" +
-                "                </Location>\n" +
-                "              </Centroid>\n" +
-                "              <CompassBearing>132.0</CompassBearing>\n" +
-                "            </Quay>\n" +
-                "            <Quay version=\"1\" id=\"SOF:Quay:1416244701\">\n" +
-                "              <Name lang=\"no\" textIdType=\"\">Nordeide kai</Name>\n" +
-                "              <Centroid>\n" +
-                "                <Location>\n" +
-                "                  <Longitude>5.98473277681978288455866277217864990234375</Longitude>\n" +
-                "                  <Latitude>61.1727082900842020762866013683378696441650390625</Latitude>\n" +
-                "                </Location>\n" +
-                "              </Centroid>\n" +
-                "            </Quay>\n" +
-                "          </quays>\n" +
-                "        </StopPlace>\n" +
-                "      </stopPlaces>\n" +
-                "    </SiteFrame>\n" +
-                "  </dataObjects>\n" +
-                "</PublicationDelivery>\n";
+        String idMatch = """
+                <?xml version="1.0" encoding="UTF-8"?>
+                <PublicationDelivery xmlns="http://www.netex.org.uk/netex">
+                  <PublicationTimestamp>2017-05-05T15:12:33.618+02:00</PublicationTimestamp>
+                  <ParticipantRef>ZZZ</ParticipantRef>
+                  <dataObjects>
+                    <SiteFrame id="idmatch" version="1">
+                       <FrameDefaults>
+                           <DefaultLocale>
+                              <TimeZone>CET</TimeZone>
+                               <DefaultLanguage>no</DefaultLanguage>
+                           </DefaultLocale>
+                      </FrameDefaults>
+                      <stopPlaces>
+                        <StopPlace version="1" id="SOF:StopPlace:14162447">
+                          <Name lang="no" textIdType="">Nordeide kai</Name>
+                          <Centroid>
+                            <Location>
+                              <Longitude>5.985714134603235</Longitude>
+                              <Latitude>61.1729031032732</Latitude>
+                            </Location>
+                          </Centroid>
+                          <StopPlaceType>onstreetBus</StopPlaceType>
+                          <quays>
+                            <Quay version="1" id="SOF:Quay:1416244704">
+                              <Name lang="no" textIdType="">Nordeide kai</Name>
+                              <Centroid>
+                                <Location>
+                                  <Longitude>5.98541250888936193774725325056351721286773681640625</Longitude>
+                                  <Latitude>61.17240898514889835269059403799474239349365234375</Latitude>
+                                </Location>
+                              </Centroid>
+                            </Quay>
+                            <Quay version="1" id="SOF:Quay:1416244703">
+                              <Name lang="no" textIdType="">Nordeide kai</Name>
+                              <Centroid>
+                                <Location>
+                                  <Longitude>5.98656984073603748441882999031804502010345458984375</Longitude>
+                                  <Latitude>61.17334218350138286268702358938753604888916015625</Latitude>
+                                </Location>
+                              </Centroid>
+                            </Quay>
+                            <Quay version="1" id="SOF:Quay:1416244702">
+                              <Name lang="no" textIdType="">Nordeide kai</Name>
+                              <Centroid>
+                                <Location>
+                                  <Longitude>5.98614141196775673137153717107139527797698974609375</Longitude>
+                                  <Latitude>61.17315295435830790893305675126612186431884765625</Latitude>
+                                </Location>
+                              </Centroid>
+                              <CompassBearing>132.0</CompassBearing>
+                            </Quay>
+                            <Quay version="1" id="SOF:Quay:1416244701">
+                              <Name lang="no" textIdType="">Nordeide kai</Name>
+                              <Centroid>
+                                <Location>
+                                  <Longitude>5.98473277681978288455866277217864990234375</Longitude>
+                                  <Latitude>61.1727082900842020762866013683378696441650390625</Latitude>
+                                </Location>
+                              </Centroid>
+                            </Quay>
+                          </quays>
+                        </StopPlace>
+                      </stopPlaces>
+                    </SiteFrame>
+                  </dataObjects>
+                </PublicationDelivery>
+                """;
 
         ImportParams importParams = new ImportParams();
         importParams.importType = ImportType.INITIAL;
