@@ -15,6 +15,7 @@
 
 package org.rutebanken.tiamat.service.stopplace;
 
+import jakarta.transaction.Transactional;
 import org.junit.Ignore;
 import org.junit.Test;
 import org.locationtech.jts.geom.Coordinate;
@@ -36,7 +37,6 @@ import org.rutebanken.tiamat.model.Value;
 import org.rutebanken.tiamat.model.VehicleModeEnumeration;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import javax.transaction.Transactional;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
@@ -149,8 +149,8 @@ public class StopPlaceMergerTest extends TiamatIntegrationTest {
         List<InstalledEquipment_VersionStructure> equipment = placeEquipment.getInstalledEquipment();
         assertThat(equipment).hasSize(1);
         assertThat(equipment).doesNotContain(generalSign); // Result from merge does not contain same object
-        assertThat(equipment.get(0)).isInstanceOf(GeneralSign.class);
-        assertThat(((GeneralSign) equipment.get(0)).getSignContentType()).isEqualTo(SignContentEnumeration.TRANSPORT_MODE);
+        assertThat(equipment.getFirst()).isInstanceOf(GeneralSign.class);
+        assertThat(((GeneralSign) equipment.getFirst()).getSignContentType()).isEqualTo(SignContentEnumeration.TRANSPORT_MODE);
 
         // assertQuays
         assertThat(mergedStopPlace.getQuays()).hasSize(2);
